--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "errorhandler": "^1.4.2",
     "method-override": "^2.3.5",
     "morgan": "^1.6.1"
+    "aws-sdk": "^2.814.0"
   },
   "scripts": {
     "start": "node server.js"
